src/features/StreetcodePage/TimelineBlock/TimelineSwiper/TimelineSwiper.styles.scss
@use "@sass/mixins/_utils.mixins.scss" as mut;
@use "@sass/variables/_variables.colors.scss" as c;
@use "@sass/variables/_variables.fonts.scss" as ft;
@use "@sass/_utils.functions.scss" as f;
@use "@sass/mixins/_vendor.mixins.scss" as vnd;

.swiper-wrapper, .swiperClass {
    width: 100%;
    margin: 0 auto;
    max-width: fit-content;
}

.swiper-horizontal {
  overflow: visible;
  @include mut.parent-sized();
  @include mut.flex-centered();
  .swiper-slide:not(.swiper-slide-visible):not(.swiper-slide-active) {
    visibility: hidden;
  }
  
  .swiper-slide {
    align-self: center;
    justify-content: center;
    margin: auto;
    .timelineYearTick {
      align-items: center;
      align-self: center;
      justify-content: center;
      margin: auto;
      @include mut.sized(21px, 21px);
    }
  }
}

.tickContainer {
  position: relative;

  span {
    @include vnd.vendored(transition, 'all .5s ease-in-out');
  }

  &.active .timelineYearTick {
    @include mut.sized(42px, 42px);
    bottom: f.pxToRem(10px);

    span {
      bottom: f.pxToRem(60px) !important;
      font-size: f.pxToRem(40px) !important;
    }
  }
}

@media screen and (max-width: 1024px) {
  .swiper-pagination {
    display: none;
  }
}

@media screen and (max-width: 1024px) {
  .swiper-horizontal{
    .swiper-slide{
      .timelineYearTick{
        @include mut.sized(10px, 10px);
      }
    }

    .swiper-slide:not(.swiper-slide-active){
      visibility: visible;
      bottom: f.pxToRem(1.5px);
    }
    .swiper-slide-active{
      bottom: f.pxToRem(2px);
    }
  }

  .tickContainer.active .timelineYearTick{
    @include mut.sized(20px, 20px);
  }

  .tickContainer.active .timelineYearTick span{
    bottom: f.pxToRem(30px) !important;
    font-size: f.pxToRem(20px) !important;
    line-height: 26px;
  }

  .swiper-wrapper, .swiperClass{
    height: f.pxToRem(20px) !important;
  }

  .swiper-pagination {
    @include mut.flexed(
      $wrap: wrap,
      $gap: 0px,
      $justify-content: center
    );
    position: absolute;
    top: f.pxToRem(350px);
    padding: 0 f.pxToRem(20px);
  }

  .swiper-pagination-bullet {
    display: block;
    @include mut.sized(8px, 8px);
    margin: 0 f.pxToRem(7.5px);
    background-color: #D9D9D9;;
    transition: all 0.4s ease-in;
  }

  .swiper-pagination-bullet-active {
    background-color: #891F16;
    width: f.pxToRem(28px) !important;
  }
}

